--- a/projectmanagement/src/main/resources/application.properties
+++ b/projectmanagement/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=C@trinel34?
 spring.datasource.url=jdbc:mysql://localhost:3306/projectmanagement?serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
