--- a/projectmanagement/src/main/resources/application.properties
+++ b/projectmanagement/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=C@trinel34?
+spring.datasource.password=jimmzz1981
 spring.datasource.url=jdbc:mysql://localhost:3306/projectmanagement?serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=update
